# game_engine_study

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.json
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Rectangle.cpp  Rectangle.h  Text.cpp  Text.h  UI.cpp  UI.h  VisualObject.h  Window.cpp  Window.h  main.cpp
